feat: add game scene
Create player, board and pieces.
Add background sprite

--- a/proj.win32/NMMorris.vcxproj
+++ b/proj.win32/NMMorris.vcxproj
@@ -118,7 +118,8 @@
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different "E:/My Systems/NMMorris/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll" "E:/My Systems/NMMorris/proj.win32/bin/NMMorris/Debug/libssl-1_1.dll"
 if %errorlevel% neq 0 goto :cmEnd
@@ -285,7 +286,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different "E:/My Systems/NMMorris/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll" "E:/My Systems/NMMorris/proj.win32/bin/NMMorris/Release/libssl-1_1.dll"
 if %errorlevel% neq 0 goto :cmEnd
@@ -452,7 +454,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different "E:/My Systems/NMMorris/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll" "E:/My Systems/NMMorris/proj.win32/bin/NMMorris/MinSizeRel/libssl-1_1.dll"
 if %errorlevel% neq 0 goto :cmEnd
@@ -618,7 +621,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different "E:/My Systems/NMMorris/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll" "E:/My Systems/NMMorris/proj.win32/bin/NMMorris/RelWithDebInfo/libssl-1_1.dll"
 if %errorlevel% neq 0 goto :cmEnd
@@ -809,6 +813,18 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Board.cpp" />
+    <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="GraphicsScene.cpp" />
+    <ClCompile Include="KeyTabletScene.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="MouseScene.cpp" />
+    <ClCompile Include="Piece.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerInput.cpp" />
+    <ClCompile Include="Spot.cpp" />
+    <ClCompile Include="TouchScene.cpp" />
+    <ClInclude Include="Board.h" />
     <ClInclude Include="E:\My Systems\NMMorris\Classes\AppDelegate.h" />
     <ClInclude Include="E:\My Systems\NMMorris\Classes\HelloWorldScene.h" />
     <ClInclude Include="E:\My Systems\NMMorris\proj.win32\main.h" />
@@ -816,6 +832,16 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClCompile Include="E:\My Systems\NMMorris\Classes\AppDelegate.cpp" />
     <ClCompile Include="E:\My Systems\NMMorris\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="E:\My Systems\NMMorris\proj.win32\main.cpp" />
+    <ClInclude Include="GameScene.h" />
+    <ClInclude Include="GraphicsScene.h" />
+    <ClInclude Include="KeyTabletScene.h" />
+    <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="MouseScene.h" />
+    <ClInclude Include="Piece.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerInput.h" />
+    <ClInclude Include="Spot.h" />
+    <ClInclude Include="TouchScene.h" />
     <ResourceCompile Include="E:\My Systems\NMMorris\proj.win32\game.rc" />
     <ClInclude Include="E:\My Systems\NMMorris\Resources\CloseNormal.png" />
     <ClInclude Include="E:\My Systems\NMMorris\Resources\CloseSelected.png" />
