--- a/proj.win32/NMMorris.vcxproj.filters
+++ b/proj.win32/NMMorris.vcxproj.filters
@@ -13,18 +13,6 @@
     <ClCompile Include="E:\My Systems\NMMorris\cocos2d\cocos\precheader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="GraphicsScene.cpp">
-      <Filter>Source Files\Classes</Filter>
-    </ClCompile>
-    <ClCompile Include="TouchScene.cpp">
-      <Filter>Source Files\Classes</Filter>
-    </ClCompile>
-    <ClCompile Include="MouseScene.cpp">
-      <Filter>Source Files\Classes</Filter>
-    </ClCompile>
-    <ClCompile Include="KeyTabletScene.cpp">
-      <Filter>Source Files\Classes</Filter>
-    </ClCompile>
     <ClCompile Include="MainMenu.cpp">
       <Filter>Source Files\Scenes</Filter>
     </ClCompile>
@@ -40,8 +28,18 @@
     <ClCompile Include="Spot.cpp">
       <Filter>Source Files\Board</Filter>
     </ClCompile>
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="PlayerInput.cpp" />
+    <ClCompile Include="TurnController.cpp" />
+    <ClCompile Include="Player.cpp">
+      <Filter>Source Files\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerInput.cpp">
+      <Filter>Source Files\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Checker.cpp" />
+    <ClCompile Include="VictoryScreen.cpp">
+      <Filter>Source Files\Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="StageController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="E:\My Systems\NMMorris\Classes\AppDelegate.h">
@@ -74,18 +72,6 @@
     <ClInclude Include="E:\My Systems\NMMorris\Resources\res\.gitkeep">
       <Filter>Resources\res</Filter>
     </ClInclude>
-    <ClInclude Include="GraphicsScene.h">
-      <Filter>Source Files\Classes</Filter>
-    </ClInclude>
-    <ClInclude Include="TouchScene.h">
-      <Filter>Source Files\Classes</Filter>
-    </ClInclude>
-    <ClInclude Include="MouseScene.h">
-      <Filter>Source Files\Classes</Filter>
-    </ClInclude>
-    <ClInclude Include="KeyTabletScene.h">
-      <Filter>Source Files\Classes</Filter>
-    </ClInclude>
     <ClInclude Include="MainMenu.h">
       <Filter>Source Files\Scenes</Filter>
     </ClInclude>
@@ -101,8 +87,18 @@
     <ClInclude Include="Spot.h">
       <Filter>Source Files\Board</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="PlayerInput.h" />
+    <ClInclude Include="TurnController.h" />
+    <ClInclude Include="Player.h">
+      <Filter>Source Files\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerInput.h">
+      <Filter>Source Files\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="Checker.h" />
+    <ClInclude Include="VictoryScreen.h">
+      <Filter>Source Files\Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="StageController.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="E:\My Systems\NMMorris\CMakeLists.txt" />
@@ -137,8 +133,8 @@
     <Filter Include="Source Files\Board">
       <UniqueIdentifier>{88bebcce-1446-48b2-823e-e9b12e35f6c5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Input">
-      <UniqueIdentifier>{ee142594-87ab-4826-8e04-90508b8a3e6f}</UniqueIdentifier>
+    <Filter Include="Source Files\Player">
+      <UniqueIdentifier>{2310ecbc-2850-46ea-bac0-a8762b1325d4}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
