--- a/proj.win32/NMMorris.vcxproj.filters
+++ b/proj.win32/NMMorris.vcxproj.filters
@@ -46,6 +46,19 @@
     <ClCompile Include="TurnController.cpp">
       <Filter>Source Files\GameLogic</Filter>
     </ClCompile>
+    <ClCompile Include="FlyStage.cpp">
+      <Filter>Source Files\TurnStages</Filter>
+    </ClCompile>
+    <ClCompile Include="MillStage.cpp">
+      <Filter>Source Files\TurnStages</Filter>
+    </ClCompile>
+    <ClCompile Include="MoveStage.cpp">
+      <Filter>Source Files\TurnStages</Filter>
+    </ClCompile>
+    <ClCompile Include="PlaceStage.cpp">
+      <Filter>Source Files\TurnStages</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerTextFieldDelegate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="E:\My Systems\NMMorris\Classes\AppDelegate.h">
@@ -111,6 +124,19 @@
     <ClInclude Include="TurnController.h">
       <Filter>Source Files\GameLogic</Filter>
     </ClInclude>
+    <ClInclude Include="FlyStage.h">
+      <Filter>Source Files\TurnStages</Filter>
+    </ClInclude>
+    <ClInclude Include="MillStage.h">
+      <Filter>Source Files\TurnStages</Filter>
+    </ClInclude>
+    <ClInclude Include="MoveStage.h">
+      <Filter>Source Files\TurnStages</Filter>
+    </ClInclude>
+    <ClInclude Include="PlaceStage.h">
+      <Filter>Source Files\TurnStages</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerTextFieldDelegate.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="E:\My Systems\NMMorris\CMakeLists.txt" />
@@ -150,6 +176,9 @@
     </Filter>
     <Filter Include="Source Files\GameLogic">
       <UniqueIdentifier>{0d20e3ef-1dca-4070-9ba7-82aeff5df5de}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\TurnStages">
+      <UniqueIdentifier>{87a54d09-76f6-427d-87ca-68b8f7a24228}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
