--- a/.gitignore
+++ b/.gitignore
@@ -42,51 +42,8 @@ BundleArtifacts
 .vs/
 *.VC.db
 
-# Ignore files build by ndk and eclipse
-/libs/
-bin/
-obj/
-gen/
-assets/
-local.properties
-
 # Ignore python compiled files
 *.pyc
-
-# Ignore files build by airplay and marmalade
-build_*_xcode/
-build_*_vc10/
-
-# Ignore files build by xcode
-*.mode*v*
-*.pbxuser
-*.xcbkptlist
-*.xcworkspacedata
-*.xcuserstate
-*.xccheckout
-xcschememanagement.plist
-IDEWorkspaceChecks.plist
-.DS_Store
-._.*
-xcuserdata/
-DerivedData/
-
-# Ignore files built by AppCode
-.idea/
-
-# Ignore files built by bada
-.Simulator-Debug/
-.Target-Debug/
-.Target-Release/
-
-# Ignore files built by blackberry
-Simulator/
-Device-Debug/
-Device-Release/
-
-# Ignore vim swaps
-*.swp
-*.swo
 
 # Ignore files created by create_project.py
 projects/
@@ -101,10 +58,6 @@ tools/jenkins_scripts/mac/android/userconf.ini
 
 # CTags
 tags
-
-# ignore files, created with make-all-linux-project script
-/lib
-/build/linux-build
 
 # Cmake files
 CMakeCache.txt
@@ -181,5 +134,6 @@ temp/
 
 # external libs zip
 *.zip
+*.rar
 **/simulator/
 s
